@@ -36,6 +36,10 @@ John Emmas
   Jackdmp changes log
 ---------------------------
 
+2011-11-03 Stephane Letz  <letz@grame.fr>
+
+	* Add missing jack_client_get_uuid API.
+
 2011-10-28 Stephane Letz  <letz@grame.fr>
 
 	* John Emmas POST_PACKED_STRUCTURE patch.
